Now using guava for string repetition instead of apache commons
Guava is already being shaded into BungeeCord so why not use it ¯\_(ツ)_/¯

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,15 @@
         </dependency>
 
 
+        <!-- TODO Ditch this dependency, move to ConfigMe
+        <dependency>
+            <groupId>me.jaimemartz</groupId>
+            <artifactId>faucet-bungee</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        -->
+
         <!-- TODO Replace with HTTP call to Spigot's API -->
         <dependency>
             <groupId>org.inventivetalent.update</groupId>
