Translated the Faucet entries to ConfigMe properties

--- a/pom.xml
+++ b/pom.xml
@@ -96,16 +96,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-
-        <!-- TODO Ditch this dependency, move to ConfigMe
         <dependency>
-            <groupId>me.jaimemartz</groupId>
-            <artifactId>faucet-bungee</artifactId>
-            <version>1.0</version>
+            <groupId>ch.jalu</groupId>
+            <artifactId>injector</artifactId>
+            <version>0.4</version>
             <scope>compile</scope>
         </dependency>
-        -->
 
         <!-- TODO Replace with HTTP call to Spigot's API -->
         <dependency>
