--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
             <version>1.11-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>ch.jalu</groupId>
             <artifactId>configme</artifactId>
@@ -96,6 +97,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>ch.jalu</groupId>
             <artifactId>injector</artifactId>
@@ -123,15 +125,17 @@
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bungeecord</artifactId>
-            <version>LATEST</version>
+            <version>1.2</version>
             <scope>compile</scope>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
