Some progress and circleci

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>configurate-hocon</artifactId>
             <version>3.3</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.bstats</groupId>
