Created layout for default config

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
+                    <!-- Already shaded in bungee -->
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
                 </exclusion>
