Some more changes

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -39,22 +39,20 @@ messages {
 
 features {
   balancer {
-    # The principal section is very important for other features
-    # Normally set this to the section that has your main lobbies
-    principal-section=test
+    # Here you have an example of what you can do with the sections
+    # The plugin will print out info telling you if your config is right or not
+    # If a section does not have a provider it will be inherit from the parent
+    # The best way to understand this is to play around with it
+    # You can use regex to match a set of servers instead of adding each server
 
-    # When a player is not in any section, the player will go to the principal section
-    # This affects both the fallback command and kick handler features
-    fallback-principal=true
-
-    # Dummy sections can have servers from other non-dummy sections
-    # When a player connects to a dummy section, nothing will happen
-    dummy-sections=[]
-
-    # Reiterative sections remember the server the player connected to previously
-    # The plugin will keep connecting the player to that server until changes
-    reiterative-sections=[]
-
+    # Providers you can use:
+    # NONE: Returns no server
+    # DIRECT: Returns the only server in the list
+    # LOCALIZED: Returns the server that matches a region (testing)
+    # LOWEST: Returns the server with the least players online
+    # RANDOM: Returns a random server
+    # PROGRESSIVE: Returns the first server that is not full
+    # FILLER: Returns the server with the most players online that is not full
     sections {
       auth-lobbies {
         provider=RANDOM
@@ -100,12 +98,52 @@ features {
         }
       }
     }
+
+    # The principal section is very important for other features
+    # Normally set this to the section that has your main lobbies
+    principal-section=test
+
+    # When a player is not in any section, the player will go to the principal section
+    # This affects both the fallback command and kick handler features
+    fallback-principal=true
+
+    # Dummy sections can have servers from other non-dummy sections
+    # When a player connects to a dummy section, nothing will happen
+    dummy-sections=[]
+
+    # Reiterative sections remember the server the player connected to previously
+    # The plugin will keep connecting the player to that server until changes
+    reiterative-sections=[]
+  }
+
+  # Pings servers to see if they are online or not and if they are accessible
+  server-checker {
+    enabled=true
+
+    # Use either CUSTOM or GENERIC, the first one generally works the best
+    tactic=CUSTOM
+
+    # The attempts before giving up on getting a server for a player
+    attempts=5
+
+    # The interval between every round of checks
+    interval=10000
+
+    # When true, the plugin will print useful info when a server gets checked
+    debug-info=false
+
+    # The descriptions that mark a server as non accessible
+    marker-descs=[
+      "Server is not accessible",
+      "Gamemode has already started"
+    ]
   }
 
   # Connects a player to the parent of current section the player is connected to
   fallback-command {
     enabled=true
 
+    # Leave permission empty for no permission
     command {
       name=fallback
       permission=""
@@ -119,7 +157,7 @@ features {
     # Add sections here where you do not want this feature to work
     excluded-sections=[]
 
-    # When true, players will not be able to get to a section
+    # When true, players will not be able to get connected to sections that are parents of the principal section
     restrictive=true
 
     # You can override the behavior with rules, overriding the parent section
@@ -129,37 +167,25 @@ features {
     }
   }
 
-
-  server-checker {
-    enabled=true
-
-    tactic=CUSTOM
-
-    attempts=5
-
-    debug-info=false
-
-    interval=10000
-
-    marker-descs=[
-      "Server is not accessible",
-      "Gamemode has already started"
-    ]
-  }
-
   # Connects a player to other section when kicked
   kick-handler {
     enabled=true
 
+    # When true, the reasons will work as a blacklist instead of a whitelist
+    # Blacklist: A player must be kicked with a reason that is NOT in the reasons
+    # Whitelist: A player must be kicked with a reason that is in the reasons
     inverted=true
 
+    # The reasons that determine if a player is reconnected or not, supports regex
     reasons=[]
 
+    # When true, players that are kicked while connecting to the proxy will be forced to reconnect to the principal section
     force-principal=false
 
     # Add sections here where you do not want this feature to work
     excluded-sections=[]
 
+    # When true, players will not be able to get connected to sections that are parents of the principal section
     restrictive=true
 
     # When true, the plugin will print useful info when a player gets kicked
