--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         </repository>
         <repository>
             <id>inventive-repo</id>
-            <url>http://repo.inventivetalent.org/content/groups/public/</url>
+            <url>https://repo.inventivetalent.org/content/groups/public/</url>
         </repository>
         <repository>
             <id>xephi-repo</id>
