Some more progress

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -46,12 +46,12 @@ features {
     # You can use regex to match a set of servers instead of adding each server
 
     # Providers you can use:
-    # NONE: Returns no server
-    # DIRECT: Returns the only server in the list
-    # LOCALIZED: Returns the server that matches a region (testing)
-    # LOWEST: Returns the server with the least players online
-    # RANDOM: Returns a random server
-    # PROGRESSIVE: Returns the first server that is not full
+    # NONE: Returns no server (no one will be able to connect to this section)
+    # DIRECT: Returns the only server that is in the list
+    # BALANCED: Returns a server between the ones with the least players online
+    # LOWEST: Returns the first server found with the least players online
+    # RANDOM: Returns a server selected by a RNG algorithm (random)
+    # PROGRESSIVE: Returns the first server found that is not full
     # FILLER: Returns the server with the most players online that is not full
     sections {
       auth-lobbies {
@@ -112,7 +112,7 @@ features {
     dummy-sections=[]
 
     # Reiterative sections remember the server the player connected to previously
-    # The plugin will keep connecting the player to that server until changes
+    # The plugin will keep connecting the player to that server until he changes
     reiterative-sections=[]
   }
 
