First thing that actually works! Not fully tested

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -2,12 +2,14 @@
 # Read the comments, they are a very important part of the configuration
 # To get support send me a private message with a description of the problem and the config file
 # To easily paste the config file (and other relevant files) use the command /balancer paste
+# If the plugin has issues loading the configuration, try putting quotes around text
 
 general {
   # IMPORTANT! Set this to true after configuring the plugin!
   enabled=false
 
   # When true, the plugin will check for new servers added to bungee
+  # TODO Not done yet
   auto-refresh=false
 
   # When true, the plugin will reload when you execute /greload
@@ -101,7 +103,7 @@ features {
 
     # The principal section is very important for other features
     # Normally set this to the section that has your main lobbies
-    principal-section=test
+    principal-section="general-lobbies"
 
     # When a player is not in any section, the player will go to the principal section
     # This affects both the fallback command and kick handler features
