I am not used to hocon...

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -14,11 +14,11 @@ general {
   # When true, the plugin will get player counts from RedisBungee
   redis-bungee=false
 
-  # When true, the plugin will print less messages while loading
+  # When true, this plugin will print less messages when loading
   silent=false
 
   # Do not modify this
-  version: "${project.version}"
+  version="${project.version}"
 }
 
 # Effectively remove (i.e comment) a message to disable it
