This is version 2.1

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -24,8 +24,8 @@ general {
 # Effectively remove (i.e comment) a message to disable it
 # Supported variables are shown in the default messages
 messages {
+  # connecting-server="&aConnecting to a {section} server" # this message is disabled by default!
   connected-server="&aConnected to {server}"
-  connecting-server="&aConnecting to a {section} server"
   invalid-input="&cThis is an invalid input type for this command"
   misc-failure="&cCould not find a server to get connected to"
   player-bypass="&cYou have not been moved because you have the playerbalancer.bypass permission"
@@ -42,6 +42,8 @@ features {
     # If a section does not have a provider it will be inherit from the parent
     # The best way to understand this is to play around with it
     # You can use regex to match a set of servers instead of adding each server
+    # You can have as many sections as you want, there is no limit here
+    # When connecting to a server in a section, you get redirected
 
     # Providers you can use:
     # NONE: Returns no server (no one will be able to connect to this section)
@@ -63,7 +65,6 @@ features {
 
       general-lobbies {
         parent="auth-lobbies"
-        provider=RANDOM
         servers=[
           "Lobby1",
           "Lobby2",
