--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.jaimemartz</groupId>
     <artifactId>playerbalancer</artifactId>
-    <version>2.1-dev</version>
+    <version>2.1</version>
     <name>PlayerBalancer</name>
 
     <properties>
@@ -17,10 +17,6 @@
         <repository>
             <id>inventive-repo</id>
             <url>https://repo.inventivetalent.org/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>xephi-repo</id>
-            <url>http://ci.xephi.fr/plugin/repository/everything/</url>
         </repository>
         <repository>
             <id>bstats-repo</id>
