--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -1,4 +1,4 @@
-# LobbyBalancer Configuration (https://www.spigotmc.org/resources/10788/)
+# PlayerBalancer Configuration (https://www.spigotmc.org/resources/10788/)
 # Read the comments, they are a very important part of the configuration
 # To get support send me a private message with a description of the problem and the config file
 # To easily paste the config file (and other relevant files) use the command /balancer paste
