Option to disable the section server sum up of players

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -110,8 +110,12 @@ features {
     dummy-sections=[]
 
     # Reiterative sections remember the server the player connected to previously
-    # The plugin will keep connecting the player to that server until he changes
+    # The plugin will keep connecting the player to that server until a change occurs
     reiterative-sections=[]
+
+    # When true, section servers will show the sum of the players on all servers on that section
+    # Important: This will make bungeecord think that your bungeecord has more players than it really does
+    show-players: true
   }
 
   # Pings servers to see if they are online or not and if they are accessible
