This should fix timeouts when connecting to a section server

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -114,7 +114,7 @@ features {
     reiterative-sections=[]
 
     # When true, section servers will show the sum of the players on all servers on that section
-    # Important: This will make bungeecord think that your bungeecord has more players than it really does
+    # Important: This will make some plugins think that your bungeecord has more players than it really does
     show-players: true
   }
 
