Added auto refresh of servers

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -128,7 +128,7 @@ features {
     # The attempts before giving up on getting a server for a player
     attempts=5
 
-    # The interval between every round of checks
+    # The interval between every round of checks (in milliseconds)
     interval=10000
 
     # When true, the plugin will print useful info when a server gets checked
@@ -198,5 +198,16 @@ features {
     rules {
       section-from=section-to
     }
+  }
+
+  # Periodically adds servers that weren't there before the plugin loaded
+  server-refresh {
+    enabled=true
+
+    # The delay to the first refresh (in milliseconds)
+    delay=2000
+
+    # The interval between every refresh (in milliseconds)
+    interval=5000
   }
 }
