I better leave this feature disabled by default

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -202,7 +202,7 @@ features {
 
   # Periodically adds servers that weren't there before the plugin loaded
   server-refresh {
-    enabled=true
+    enabled=false
 
     # The delay to the first refresh (in milliseconds)
     delay=2000
