--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,6 @@ jobs:
           path: target/surefire-reports
 
       - store_artifacts:
-          path: target/PlayerBalancer.jar
+          paths:
+            - target/PlayerBalancer.jar
+            - target/PlayerBalancerAddon.jar
