Didn't notice the order IDEA generated the onEnable and onDisable methods...

--- a/Spigot Addon/src/main/resources/plugin.yml
+++ b/Spigot Addon/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: PlayerBalancerAddon
 main: com.jaimemartz.playerbalanceraddon.PlayerBalancerAddon
 version: ${project.version}
 author: jaime29010
+
+softdepend: [PlaceholderAPI]
