Plugin message kinda works, next up: creating more subchannels on the bungee side, creating the command and creating the placeholders

--- a/Spigot Addon/pom.xml
+++ b/Spigot Addon/pom.xml
@@ -18,7 +18,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>3.0.2</version>
                 <configuration>
                     <outputDirectory>../target</outputDirectory>
                 </configuration>
@@ -32,7 +32,7 @@
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
-            <id>placeholderapi</id>
+            <id>papi-repo</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
     </repositories>
