Fixed mismatch between expected and configuration name of property

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -103,7 +103,7 @@ features {
 
     # When a player is not in any section, the player will go to the principal section
     # This affects both the fallback command and kick handler features
-    fallback-principal=true
+    default-principal=true
 
     # Dummy sections can have servers from other non-dummy sections
     # When a player connects to a dummy section, nothing will happen
