Fixed shitty mistakes here and there

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -52,6 +52,7 @@ features {
     # RANDOM: Returns a server selected by a RNG algorithm (random)
     # PROGRESSIVE: Returns the first server found that is not full
     # FILLER: Returns the server with the most players online that is not full
+    # EXTERNAL: Returns the server determined by a provider created by other plugin
     sections {
       auth-lobbies {
         provider=RANDOM
@@ -65,9 +66,7 @@ features {
       general-lobbies {
         parent="auth-lobbies"
         servers=[
-          "Lobby1",
-          "Lobby2",
-          "Lobby3"
+          "Lobby[1-3]"
         ]
       }
 
@@ -84,10 +83,7 @@ features {
       skywars-games {
         parent="skywars-lobbies"
         provider=FILLER
-        servers=[
-          "SW_A1", "SW_A2", "SW_A3", "SW_A4", "SW_A5",
-          "SW_B1", "SW_B2", "SW_B3", "SW_B4", "SW_B5"
-        ]
+        servers=["SW_A[1-5]", "SW_B[1-5]"]
         section-server=playskywars
         section-command {
           name=skywars
@@ -115,7 +111,7 @@ features {
 
     # When true, section servers will show the sum of the players on all servers on that section
     # Important: This will make some plugins think that your bungeecord has more players than it really does
-    show-players: true
+    show-players=true
   }
 
   # Pings servers to see if they are online or not and if they are accessible
