--- a/Main Plugin/pom.xml
+++ b/Main Plugin/pom.xml
@@ -11,6 +11,7 @@
 
     <name>PlayerBalancer Plugin</name>
     <artifactId>playerbalancer-plugin</artifactId>
+    <version>2.1.1.1</version>
 
     <build>
         <finalName>PlayerBalancer</finalName>
