Added option to disable plugin messaging

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -17,6 +17,10 @@ general {
   # When true, this plugin will print less messages when loading
   silent=false
 
+  # When true, spigot plugins will be able to contact with this plugin
+  # Do not disable if you are using the addon!
+  plugin-messaging=true
+
   # Do not modify this
   version="${project.version}"
 }
