Added new API subchannel and other small improvements

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -135,10 +135,10 @@ features {
     # When true, the plugin will print useful info when a server gets checked
     debug-info=false
 
-    # The descriptions that mark a server as non accessible
+    # When the description of a server matches these, it will be set as non accessible
     marker-descs=[
-      "Server is not accessible",
-      "Gamemode has already started"
+      "(?i).*maintenance*" # match if contains (regex)
+      "Game in progress", # match if exactly equal
     ]
   }
 
