Added timeout for the server checker CUSTOM tactic

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -132,6 +132,9 @@ features {
     # The interval between every round of checks (in milliseconds)
     interval=10000
 
+    # The timeout of a ping, only applied to the CUSTOM tactic
+    timeout=7000
+
     # When true, the plugin will print useful info when a server gets checked
     debug-info=false
 
