--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -214,4 +214,13 @@ features {
     # The interval between every refresh (in milliseconds)
     interval=5000
   }
+
+  # Forces the first server players connect (when not connected already) to be one of a specific section
+  # This overrides `force_default_server` from BungeeCord
+  force-entry-section {
+    enabled=false
+
+    # The section you want
+    section="auth-lobbies"
+  }
 }
