Little changes to the behaviour of the server checker

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -139,6 +139,7 @@ features {
     debug-info=false
 
     # When the description of a server matches these, it will be set as non accessible
+    # Be aware of colors, it is recommended to use the "contains" rule below or some others
     marker-descs=[
       "(?i).*maintenance*" # match if contains (regex)
       "Game in progress", # match if exactly equal
