Added back the ability to get connected to the same section

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -33,7 +33,7 @@ messages {
   invalid-input="&cThis is an invalid input type for this command"
   misc-failure="&cCould not find a server to get connected to"
   player-bypass="&cYou have not been moved because you have the playerbalancer.bypass permission"
-  player-kicked="&cYou have been kicked from &a{from} &cand you are being moved to &a{to}, reason: &a{reason}"
+  player-kicked="&cYou have been kicked from &a{from} &cso you are being moved to &a{to}\n&cReason: &a{reason}"
   same-section="&cYou are already connected to a server on this section!"
   unavailable-server="&cThis command cannot be executed on this server"
   unknown-section="&aCould not find a section with that name"
