Updated provider names

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -77,7 +77,7 @@ features {
 
       skywars-lobbies {
         parent="general-lobbies"
-        provider=LOWEST
+        provider=PROGRESSIVE_LOWEST
         servers=[
           "SWLobby1",
           "SWLobby2",
@@ -87,7 +87,7 @@ features {
 
       skywars-games {
         parent="skywars-lobbies"
-        provider=FILLER
+        provider=RANDOM_FILLER
         servers=["SW_A[1-5]", "SW_B[1-5]"]
         section-server=playskywars
         section-command {
