Added option to disable prevention of connections in the same section

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -167,6 +167,11 @@ features {
     # When true, players will not be able to get connected to sections that are parents of the principal section
     restrictive=true
 
+    # When true, players will not be able get connected within servers of the same section
+    # This does not affect the parametized variant of the command (/command [number])
+    # This also affects section commands
+    prevent-same-section=true
+
     # You can override the behavior with rules, overriding the parent section
     # This will set the section to go when you come from the section specified
     rules {
@@ -199,7 +204,7 @@ features {
     debug-info=false
 
     # You can override the behavior with rules, overriding the parent section
-    # This will set the section to go when you come from the section specified
+    # When you get kicked from the section on the left, you go to the one on the right
     rules {
       section-from=section-to
     }
