Restructured some classes, progress for custom commands

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -220,4 +220,48 @@ features {
     # The interval between every refresh (in milliseconds)
     interval=5000
   }
+
+  custom-find-command {
+    enabled=false
+
+    command {
+      name=find
+      permission=""
+      aliases=[]
+    }
+
+    formats {
+      result=""
+      offline=""
+    }
+  }
+
+  custom-list-command {
+    enabled = false
+
+    command {
+      name = glist
+      permission = ""
+      aliases = []
+    }
+
+    formats {
+      server = ""
+      total = ""
+    }
+  }
+
+  custom-server-command {
+    enabled = false
+
+    command {
+      name = glist
+      permission = ""
+      aliases = []
+    }
+
+    formats {
+      # Nothing yet
+    }
+  }
 }
