Added aliases, permission router, and progress for custom commands

--- a/Main Plugin/src/main/resources/default.conf
+++ b/Main Plugin/src/main/resources/default.conf
@@ -28,8 +28,8 @@ general {
 # Effectively remove (i.e comment) a message to disable it
 # Supported variables are shown in the default messages
 messages {
-  # connecting-server="&aConnecting to a {section} server" # this message is disabled by default!
-  connected-server="&aConnected to {server}"
+  # connecting-server="&aConnecting to an {section} ({alias}) server" # this message is disabled by default!
+  connected-server="&aConnected to {server} (an {alias} server)"
   invalid-input="&cThis is an invalid input type for this command"
   misc-failure="&cCould not find a server to get connected to"
   player-bypass="&cYou have not been moved because you have the playerbalancer.bypass permission"
@@ -70,6 +70,7 @@ features {
 
       general-lobbies {
         parent="auth-lobbies"
+        alias="General Lobbies"
         servers=[
           "Lobby[1-3]"
         ]
@@ -141,8 +142,8 @@ features {
     # When the description of a server matches these, it will be set as non accessible
     # Be aware of colors, it is recommended to use the "contains" rule below or some others
     marker-descs=[
-      "(?i).*maintenance*" # match if contains (regex)
-      "Game in progress", # match if exactly equal
+      "(?i).*maintenance*", # match if contains (regex)
+      "Game in progress" # match if exactly equal
     ]
   }
 
@@ -237,12 +238,12 @@ features {
   }
 
   custom-list-command {
-    enabled = false
+    enabled=false
 
     command {
-      name = glist
-      permission = ""
-      aliases = []
+      name=glist
+      permission=""
+      aliases=[]
     }
 
     formats {
@@ -252,16 +253,26 @@ features {
   }
 
   custom-server-command {
-    enabled = false
+    enabled=false
 
     command {
-      name = glist
-      permission = ""
-      aliases = []
+      name=server
+      permission=""
+      aliases=[]
     }
 
     formats {
       # Nothing yet
+    }
+  }
+
+  permission-router {
+    enabled=false
+
+    routes {
+      general-lobbies {
+        special.permission=other-lobby-section,
+      }
     }
   }
 }
